--- a/program.html
+++ b/program.html
@@ -88,8 +88,8 @@
                     <td><i class="icon bi bi-clock"></i> 14:10 - 15:15</td>
                     <td><i class="icon bi bi-mic"></i> Keynote <br>
                         <div id="keynote_title"><img id="keynote_pic" src="assets/img/shihab.jpg">
-                            <div id="keynote_name"><b><i style="font-size:18px"><a href="https://mpapad.github.io/" target="_blank">Mike Papadakis</a></i></b>
-                            | University of Luxembourg, Interdisciplinary Centre for Security, Reliability and Trust (SnT)
+                            <div id="keynote_name"><b><i style="font-size:18px"><a href="https://www.concordia.ca/faculty/emad-shihab.html" target="_blank">Emad Shihab</a></i></b>
+                            | Concordia University, Montréal, Canada
                                 <br><button class="btn btn-publication btn-sm" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_2" aria-expanded="false" aria-controls="collapse_4">
                                     Bio
                                 </button>
