--- a/program.html
+++ b/program.html
@@ -97,15 +97,10 @@
                         </div>               
                         
                         <div class="collapse abstract" id="collapse_2">
-                            <p><b>Emad Shihab</b> is an Associate Professor at the University of Luxembourg where he leads the SERVAL (SEcurity, Reasoning and VALidation) research team.
-                                His research interests include software testing, code analysis and artificial inteligence for software engineering. He is best known for his work on Mutation
-                                Testing for which he has been awarded IEEE TCSE Rising Star Award 2020. He has been General Chair of the ACM SIGSOFT ISSTA 2025 and IEEE ICSME 2021 and Program
-                                Chair of SSBSE 2022 and IEEE ICST 2023. He also serves at the editorial and review boards of international Software Engineering journals (STVR, Empirical
-                                Software Engineering, ACM Transactions on Software Engineering and Methodology) and has co-authored of more than 100 publications in international peer-reviewed
-                                conferences and journals. His work has been supported by Facebook, FNR, CETREL (SIX group company), BGL (BNP Paribas), Microsoft and PayPal.</p>
+                            <p><b>Emad Shihab</b> Emad Shihab is an Associate Professor and Concordia University Research Chair in the Department of Computer Science and Software Engineering at Concordia University. His research interests are in software engineering, mining software repositories, and software analytics. His work has been published in some of the most prestigious SE venues, including ICSE, ESEC/FSE, MSR, ICSME, EMSE, and TSE. He serves on the steering committees of PROMISE, SANER, and MSR, three of the leading conferences in areas of software analytics. His work has been done in collaboration with and adopted by some of the biggest software companies, such as Microsoft, Avaya, BlackBerry, Ericsson, and National Bank. He is a senior member of the IEEE.</p>
                         </div>
-                        <br><b><i>A Tale of Vulnerability Prediction</i></b>
-                        <br><p>he use of LLMs is transforming software engineering. In many aspects of SE, using LLMs has shown tremendous improvements. One area where LLMs struggle is in the suggestion and management of software dependencies. In this talk, I will present some work that highlights the challenges of using LLMs when software dependencies are involved. I will also present some of the reasons LLMs tend to struggle with software dependencies and suggest potential solutions to address these challenges.</p><br>
+                        <br><b><i>On the Use of LLMs in the Presence of Software Dependencies</i></b>
+                        <br><p>The use of LLMs is transforming software engineering. In many aspects of SE, using LLMs has shown tremendous improvements. One area where LLMs struggle is in the suggestion and management of software dependencies. In this talk, I will present some work that highlights the challenges of using LLMs when software dependencies are involved. I will also present some of the reasons LLMs tend to struggle with software dependencies and suggest potential solutions to address these challenges.</p><br>
                     </td>
                 </tr>
                 <tr>
