--- a/program.html
+++ b/program.html
@@ -81,11 +81,11 @@
                 <tr>
                     <td rowspan="7" style="padding-top: 20%"><i class="icon bi bi-calendar"></i> 21 June, 2024
                         <br><a href="https://www.google.com/maps/dir//Lungomare+Clemente+Tafuri,+1,+84127+Salerno+SA/@40.6743443,14.7707259,14.27z/data=!4m8!4m7!1m0!1m5!1m1!1s0x133bc246d5b3550b:0x14eeac8b514c5197!2m2!1d14.7758765!2d40.6725135?hl=it&entry=ttu" target="_blank"><i class="bi bi-geo-alt"></i> <strong>Grand Hotel, Salerno </strong></a></td>
-                    <td class><i class="icon bi bi-clock"></i> 14:00 - 14:10</td>
-                    <td><i class="icon bi bi-people"></i> Welcome from the Organizers</td>
+                    <td class><i class="icon bi bi-clock"></i> 9:00 - 9:10</td>
+                    <td><i class="icon bi bi-people"></i> Welcome Message and Opening Remarks</td>
                 </tr>
                 <tr>
-                    <td><i class="icon bi bi-clock"></i> 14:10 - 15:15</td>
+                    <td><i class="icon bi bi-clock"></i> 9:10 - 10:00</td>
                     <td><i class="icon bi bi-mic"></i> Keynote <br>
                         <div id="keynote_title"><img id="keynote_pic" src="assets/img/shihab.jpg">
                             <div id="keynote_name"><b><i style="font-size:18px"><a href="https://www.concordia.ca/faculty/emad-shihab.html" target="_blank">Emad Shihab</a></i></b>
@@ -97,7 +97,7 @@
                         </div>               
                         
                         <div class="collapse abstract" id="collapse_2">
-                            <p><b>Emad Shihab</b> Emad Shihab is an Associate Professor and Concordia University Research Chair in the Department of Computer Science and Software Engineering at Concordia University. His research interests are in software engineering, mining software repositories, and software analytics. His work has been published in some of the most prestigious SE venues, including ICSE, ESEC/FSE, MSR, ICSME, EMSE, and TSE. He serves on the steering committees of PROMISE, SANER, and MSR, three of the leading conferences in areas of software analytics. His work has been done in collaboration with and adopted by some of the biggest software companies, such as Microsoft, Avaya, BlackBerry, Ericsson, and National Bank. He is a senior member of the IEEE.</p>
+                            <p><b>Emad Shihab</b> is an Associate Professor and Concordia University Research Chair in the Department of Computer Science and Software Engineering at Concordia University. His research interests are in software engineering, mining software repositories, and software analytics. His work has been published in some of the most prestigious SE venues, including ICSE, ESEC/FSE, MSR, ICSME, EMSE, and TSE. He serves on the steering committees of PROMISE, SANER, and MSR, three of the leading conferences in areas of software analytics. His work has been done in collaboration with and adopted by some of the biggest software companies, such as Microsoft, Avaya, BlackBerry, Ericsson, and National Bank. He is a senior member of the IEEE.</p>
                         </div>
                         <br><b><i>On the Use of LLMs in the Presence of Software Dependencies</i></b>
                         <br><p>The use of LLMs is transforming software engineering. In many aspects of SE, using LLMs has shown tremendous improvements. One area where LLMs struggle is in the suggestion and management of software dependencies. In this talk, I will present some work that highlights the challenges of using LLMs when software dependencies are involved. I will also present some of the reasons LLMs tend to struggle with software dependencies and suggest potential solutions to address these challenges.</p><br>
