--- a/program.html
+++ b/program.html
@@ -105,10 +105,10 @@
                 </tr>
                 <tr>
                     <td><i class="icon bi bi-clock"></i> 15:15 - 15:30</td>
-                    <td><b></b><i><i class="icon bi bi-easel"></i> Paper Session #1</i></b> — 1 paper <br>
+                    <td><b></b><i><i class="icon bi bi-easel"></i> Paper Session #1</i></b> — 2 papers <br>
                         <ul>
-                            <li>15:15-15:30 — <i>"Security Risk Assessment on Cloud: A Systematic Mapping Study"</i>, G. Annunziata et al.</li>
-                            
+                            <li>10:00-10:15 — <i>"Usability of Static Application Security Testing Workflows"</i>, Bhagya Chembakottu and Martin P. Robillard </li>
+                            <li>10:15-10:30 — <i>"Malicious and Unintentional Disclosure Risks in Large Language Models for Code Generation"</i>, Rafiqul Rabin, Sean McGregor and Nick Judd</li>
                         </ul>
                     </td>
                 </tr>
@@ -118,7 +118,7 @@
                 </tr>
                 <tr>
                     <td><i class="icon bi bi-clock"></i> 16:00 - 16:35</td>
-                    <td><b></b><i><i class="icon bi bi-easel"></i> Paper Session #2</i></b> — 3 papers <br>
+                    <td><b></b><i><i class="icon bi bi-easel"></i> Paper Session #2</i></b> — 2 papers <br>
                         <ul>
                             <li>16:00-16:15 — <i>"Semgrep*: Improving the Limited Performance of Static Application Security Testing (SAST) Tools"</i>, G. Bennett et al.</li>
                             <li>16:15-16:25 — <i>"Toward a Search-Based Approach to Support the Design of Security Tests for Malicious Network Traffic"</i>, D. La Gamba et al.</li>
