--- a/program.html
+++ b/program.html
@@ -113,16 +113,17 @@
                     </td>
                 </tr>
                 <tr>
-                    <td><i class="icon bi bi-clock"></i> 15:30 - 16:00</td>
+                    <td><i class="icon bi bi-clock"></i> 10:30 - 11:00</td>
                     <td><i class="icon bi bi-cup-hot"></i> Coffee Break</td>
                 </tr>
                 <tr>
-                    <td><i class="icon bi bi-clock"></i> 16:00 - 16:35</td>
-                    <td><b></b><i><i class="icon bi bi-easel"></i> Paper Session #2</i></b> — 2 papers <br>
+                    <td><i class="icon bi bi-clock"></i> 11:00 - 12:00</td>
+                    <td><b></b><i><i class="icon bi bi-easel"></i> Paper Session #2</i></b> — 3 papers <br>
                         <ul>
-                            <li>16:00-16:15 — <i>"Semgrep*: Improving the Limited Performance of Static Application Security Testing (SAST) Tools"</i>, G. Bennett et al.</li>
-                            <li>16:15-16:25 — <i>"Toward a Search-Based Approach to Support the Design of Security Tests for Malicious Network Traffic"</i>, D. La Gamba et al.</li>
-                            <li>16:25-16:35 — <i>"LLM Security Guard for Code"</i>, A. Kavian et al.</li>
+                            <li>16:00-16:15 — <i>"Impact of Identifier Normalization on Vulnerability Detection Techniques"</i>, Torge Hinrichs, Tim Diercks and Riccardo Scandariato</li>
+                            <li>16:15-16:25 — <i>"SBOM Generation Tools and Formats Affect Compliance with US Standard"</i>, Redempta Manzi Muneza, Aidan Keefe, Eric O'Donoghue, Clemente Izurieta, Ann Marie Reinhold</li>
+                            <li>16:25-16:35 — <i>"Links Between Package Popularity, Criticality, and Security in Software Ecosystems"</i>, Alexis Butler and Dan O'Keeffe </li>
+                            <li>16:25-16:35 — <i>"Closing Remarks, End of MSR4P&S"</i>, Nicolás E. Díaz Ferreyra.</li>
                         </ul>
                     </td>
                 </tr>
