--- a/program.html
+++ b/program.html
@@ -80,7 +80,7 @@
                 </tr>
                 <tr>
                     <td rowspan="7" style="padding-top: 20%"><i class="icon bi bi-calendar"></i> 21 June, 2024
-                        <br><a href="https://www.google.com/maps/dir//Lungomare+Clemente+Tafuri,+1,+84127+Salerno+SA/@40.6743443,14.7707259,14.27z/data=!4m8!4m7!1m0!1m5!1m1!1s0x133bc246d5b3550b:0x14eeac8b514c5197!2m2!1d14.7758765!2d40.6725135?hl=it&entry=ttu" target="_blank"><i class="bi bi-geo-alt"></i> <strong>Grand Hotel, Salerno </strong></a></td>
+                        <br><a href="https://www.google.com/maps/place/Polytechnique+Montréal/@45.5047976,-73.615758,16z/data=!3m1!4b1!4m6!3m5!1s0x4cc919f2a9fc4d71:0xda267ca95684133e!8m2!3d45.5047939!4d-73.6131831!16zL20vMDFqNXY3?entry=ttu&g_ep=EgoyMDI1MDIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank"><i class="bi bi-geo-alt"></i> <strong>Polytechnique Montréal, Montréal</strong></a></td>
                     <td class><i class="icon bi bi-clock"></i> 9:00 - 9:10</td>
                     <td><i class="icon bi bi-people"></i> Welcome Message and Opening Remarks</td>
                 </tr>
