--- a/program.html
+++ b/program.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>SECUTE 2024</title>
+    <title>MSR4P&S 2025</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="#"></script>
@@ -46,7 +46,7 @@
     <div class="container d-flex align-items-center justify-content-between" id="navbar-container">
         <div class="d-flex">
             <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img/secute-logo.png" alt="" class="img-fluid"></a>
-            <h1 class="logo"><a href="index.html">SECUTE 2024</a></h1>
+            <h1 class="logo"><a href="index.html">MSR4P&S 2025</a></h1>
         </div>
 
         <nav id="navbar" class="navbar">
@@ -79,7 +79,7 @@
                     <th class="col-event">Event</th>
                 </tr>
                 <tr>
-                    <td rowspan="7" style="padding-top: 20%"><i class="icon bi bi-calendar"></i> 21 June, 2024
+                    <td rowspan="7" style="padding-top: 20%"><i class="icon bi bi-calendar"></i> March 4, 2025
                         <br><a href="https://www.google.com/maps/place/Polytechnique+Montréal/@45.5047976,-73.615758,16z/data=!3m1!4b1!4m6!3m5!1s0x4cc919f2a9fc4d71:0xda267ca95684133e!8m2!3d45.5047939!4d-73.6131831!16zL20vMDFqNXY3?entry=ttu&g_ep=EgoyMDI1MDIxMS4wIKXMDSoASAFQAw%3D%3D" target="_blank"><i class="bi bi-geo-alt"></i> <strong>Polytechnique Montréal, Montréal</strong></a></td>
                     <td class><i class="icon bi bi-clock"></i> 9:00 - 9:10</td>
                     <td><i class="icon bi bi-people"></i> Welcome Message and Opening Remarks</td>
@@ -147,7 +147,7 @@
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
         <div class="credits">
-            SECUTE 2024
+            MSR4P&S 2025
         </div>
     </div>
 </footer>
