--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>MSR4P&S 2025</title>
+    <title>MSR4P&S 2026</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="#"></script>
@@ -46,7 +46,7 @@
         <div class="container d-flex align-items-center justify-content-between" id="navbar-container">
             <div class="d-flex">
             <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img/msr4ps/msrpslogo2.png" alt="" class="img-fluid"></a>
-            <h1 class="logo"><a href="index.html">MSR4P&S 2025</a></h1>
+            <h1 class="logo"><a href="index.html">MSR4P&S 2026</a></h1>
             </div>
 
             <nav id="navbar" class="navbar">
@@ -62,6 +62,7 @@
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="https://msr4ps.netlify.app/msr4ps2022/" target="_blank">2022</a></li>
                             <li><a class="dropdown-item" href="https://msr4ps.netlify.app/msr4ps2024/" target="_blank">2024</a></li>
+                            <li><a class="dropdown-item" href="/2025/" target="_blank">2025</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -80,10 +81,10 @@
                 <div class="col-lg-12 d-flex flex-column justify-content-center align-items-center">
                     <div><img src="assets/img/msr4ps/msrpslogo2.png" class="img-fluid col-lg-4 rounded mx-auto d-block"
                               data-aos="zoom-out" data-aos-delay="2000" data-aos-duration="1000" alt="logo"></div>
-                    <h1 data-aos="zoom-out" data-aos-delay="2000"  data-aos-duration="1000">MSR4P&S 2025</h1>
-                    <h2 style="margin-bottom: 1%" data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">The 3rd International Workshop on Mining Software Repositories Applications for Privacy and Security</h2>
-                    <h2 data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">March 4, 2025 - Montréal, Canada</h2>
-                    <h3 data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">Co-located with <a href="https://conf.researchr.org/home/saner-2025">SANER 2025</a></h3>
+                    <h1 data-aos="zoom-out" data-aos-delay="2000"  data-aos-duration="1000">MSR4P&S 2026</h1>
+                    <h2 style="margin-bottom: 1%" data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">The 4th International Workshop on Mining Software Repositories Applications for Privacy and Security</h2>
+                    <h2 data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">March 17, 2026 - Limassol, Cyprus</h2>
+                    <h3 data-aos="zoom-out" data-aos-delay="2500"  data-aos-duration="800">Co-located with <a href="https://conf.researchr.org/home/saner-2026">SANER 2026</a></h3>
                 </div>
             </div>
         </div>
@@ -118,8 +119,8 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
             </div>
             <div class="row about-container">
                 <h3 data-aos="fade-up" data-aos-delay="200" data-aos-duration="800"> Where and When? </h3>
-                <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200"> The 3rd International Workshop on Mining Software Repositories Applications for Privacy and Security
-                    will be held in Montréal, Canada, co-located with <a href="https://conf.researchr.org/home/saner-2025">SANER 2025</a>. </h4>
+                <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200"> The 4th International Workshop on Mining Software Repositories Applications for Privacy and Security
+                    will be held in Limassol, Cyprus, co-located with <a href="https://conf.researchr.org/home/saner-2026">SANER 2026</a>. </h4>
             </div>
             <div class="row about-container">
                 <div class="supporting-container supporting-img" style="padding-left: 0; width: 20%;">
@@ -250,7 +251,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                 Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
             </div>
             <div class="credits">
-                MSR4P&S 2025
+                MSR4P&S 2026
             </div>
         </div>
     </footer>
