--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                 <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200"> The 4th International Workshop on Mining Software Repositories Applications for Privacy and Security
                     will be held in Limassol, Cyprus, co-located with <a href="https://conf.researchr.org/home/saner-2026">SANER 2026</a>. </h4>
             </div>
-            <div class="row about-container">
+            <!-- KEYNOTE<div class="row about-container">
                 <div class="supporting-container supporting-img" style="padding-left: 0; width: 20%;">
                     <div style="display: flex;justify-content: left;align-items: self-start;flex-direction: column;"><img src="assets/img/shihab.jpg" class="" style="height: 260px" data-aos="zoom-out" data-aos-delay="200"
                     data-aos-duration="1000" alt="shihab"></div>
@@ -132,7 +132,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                     <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800"> On the Use of LLMs in the Presence of Software Dependencies </h4>
                     <h4 data-aos="fade-up" data-aos-delay="300" data-aos-duration="800" style="font-weight: 200; italic"> Prof. Emad Shihab, Concordia University (Canada) </h4>
                     <p data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">  The use of LLMs is transforming software engineering. In many aspects of SE, using LLMs has shown tremendous improvements. One area where LLMs struggle is in the suggestion and management of software dependencies. In this talk, I will present some work that highlights the challenges of using LLMs when software dependencies are involved. I will also present some of the reasons LLMs tend to struggle with software dependencies and suggest potential solutions to address these challenges.
-                </div>
+                </div> -->
             </div>
         </div>
         
