--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>MSR4P&S 2025</title>
+    <title>MSR4P&S 2026</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="#"></script>
@@ -48,15 +48,15 @@
     <div class="container d-flex align-items-center justify-content-between" id="navbar-container">
         <div class="d-flex">
         <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img/msr4ps/msrpslogo.png" alt="" class="img-fluid"></a>
-        <h1 class="logo"><a href="index.html">MSR4P&S 2025</a></h1>
+        <h1 class="logo"><a href="index.html">MSR4P&S 2026</a></h1>
         </div>
 
         <nav id="navbar" class="navbar">
             <ul>
                 <li><a class="nav-link" href="index.html"><i class="bi bi-house"></i> Home</a></li>
                 <li><a class="nav-link active" href="call_for_papers.html"><i class="bi bi-bell"></i>Call for papers</a></li>
-                <li><a class="nav-link" href="accepted_papers.html"><i class="bi bi-journals"></i>Accepted Papers</a></li>
-                <li><a class="nav-link" href="program.html"><i class="bi bi-pencil-square"></i>Program</a></li>
+                <!-- <li><a class="nav-link" href="accepted_papers.html"><i class="bi bi-journals"></i>Accepted Papers</a></li> -->
+                <!-- <li><a class="nav-link" href="program.html"><i class="bi bi-pencil-square"></i>Program</a></li> -->
                 <li><a class="nav-link" href="committee.html"><i class="bi bi-people"></i>Committee</a></li>
                 <li class="nav-item dropdown"><a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-expanded="false">
                 Past Editions
@@ -118,12 +118,12 @@
                     <li><strong> Regular papers: </strong> Up to 8 pages, including references. Regular papers must describe original contributions in research and/or practice. Although they can be work-in-progress, the authors must present a clear path forward. These will be given a 15-minute presentation, plus 5 minutes for Q&A during the workshop.</li>
 
                     <li><strong> Short papers:  </strong> Up to 4 pages, including references. Short papers encompass position papers, experience reports, work-in-progress, new trends papers, industrial reports, datasets and tools. These will be given a 7-minutes presentation, plus 3 minutes for Q&A during the workshop. </li>
-                    <li><strong> Posters: </strong> Authors need to submit a 2-page extended abstract that summarizes (1) the problem addressed by the poster, (2) the approach taken by the authors, and (3) the main results achieved so far. The extended abstract <mark>will not be included</mark> in the SANER 2025 proceedings.</li>
+                    <li><strong> Posters: </strong> Authors need to submit a 2-page extended abstract that summarizes (1) the problem addressed by the poster, (2) the approach taken by the authors, and (3) the main results achieved so far. The extended abstract <mark>will not be included</mark> in the SANER 2026 proceedings.</li>
                     </ul>
                 </p>
                 <p> The workshop will follow a <mark>double-anonymous</mark> peer review process in alignment with SANER's Review Process policies. This means that the papers submitted must not reveal the authors’ identities in any way, omitting the names from the submission and referring to self-citations in the third person.</p>
                 <p> All submitted papers will be reviewed regarding technical quality, relevance, significance, and clarity by the program committee. All workshop papers should be submitted electronically in PDF format through the workshop website (IEEE Format, Double Columns). Accepted papers will become part of the workshop proceedings.</p>
-                <p> Please note that for each accepted paper, at least one author <mark>must register</mark> at MSR4P&S 2025 and present it. This is mandatory to get the paper published in the proceedings.</p>
+                <p> Please note that for each accepted paper, at least one author <mark>must register</mark> at MSR4P&S 2026 and present it. This is mandatory to get the paper published in the proceedings.</p>
                 <h4> Link for the submission: <a href="https://easychair.org/conferences/?conf=msr4ps2025">https://easychair.org/conferences/?conf=msr4ps2025</a></h4>
             </br>
             </div>
@@ -159,7 +159,7 @@
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
         <div class="credits">
-            MSR4P&S 2025
+            MSR4P&S 2026
         </div>
     </div>
 </footer>
