--- a/committee.html
+++ b/committee.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-    <title>MSR4P&S 2025</title>
+    <title>MSR4P&S 2026</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="#"></script>
@@ -47,7 +47,7 @@
     <div class="container d-flex align-items-center justify-content-between" id="navbar-container">
         <div class="d-flex">
             <a href="index.html" class="logo" style="margin-right: 20px"><img src="assets/img//msr4ps/msrpslogo.png" alt="" class="img-fluid"></a>
-            <h1 class="logo"><a href="index.html">MSR4P&S 2025</a></h1>
+            <h1 class="logo"><a href="index.html">MSR4P&S 2026</a></h1>
         </div>
 
         <nav id="navbar" class="navbar">
@@ -115,7 +115,7 @@
                 </div>
                 
             </div>
-            <div class="type-chairs">
+            <!-- WEB CHAIR <div class="type-chairs">
                 <h4> Web & Publicity Chair</h4>
                 <div class="d-flex justify-content-center">
                     <div class="col-lg-3 col-md-6 col-sm-8 d-flex justify-content-center" data-aos="fade-left" data-aos-delay="200" data-aos-duration="800">
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
         
         <div class="row class-container white" id="program_committee" style="margin-top:3%">
@@ -179,7 +179,7 @@
             Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
         </div>
         <div class="credits">
-            MSR4P&S 2025
+            MSR4P&S 2026
         </div>
     </div>
 </footer>
