--- a/committee.html
+++ b/committee.html
@@ -63,6 +63,7 @@
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                         <li><a class="dropdown-item" href="https://msr4ps.netlify.app/msr4ps2022/" target="_blank">2022</a></li>
                         <li><a class="dropdown-item" href="https://msr4ps.netlify.app/msr4ps2024/" target="_blank">2024</a></li>
+                        <li><a class="dropdown-item" href="/2025/" target="_blank">2025</a></li>
                     </ul>
                 </li>
             </ul>
