--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -135,11 +135,11 @@
             <div class="grey" data-aos="fade-left" data-aos-delay="900" data-aos-duration="500">
                 <h3>Important dates</h3>
                 <ul>
-                    <li><strong>Abstract submission:</strong> November 17th, 2024 (not mandatory) </li>
-                    <li><strong>Paper submission (extended!):</strong> <s style="color: #BEBEBE;">November 15th, 2024</s> <strong><font color="red">December 7th, 2024</font></strong></li>
-                    <li><strong>Notification:</strong> <s style="color: #BEBEBE;">December 20th, 2024</s> December 22nd, 2024 </li>
-                    <li><strong>Paper camera-ready:</strong> January 10th, 2025 </li>
-                    <li><strong>Workshop:</strong> March 4th, 2025</li>
+                    <li><strong>Abstract submission:</strong> December 12th, 2025 (not mandatory) </li>
+                    <li><strong>Paper submission:</strong> December 18th, 2025</li>
+                    <li><strong>Notification:</strong> January 14th, 2026 </li>
+                    <li><strong>Paper camera-ready:</strong> January 20th, 2026 </li>
+                    <li><strong>Workshop:</strong> March 17th, 2026</li>
                   </ul>
                   
             </div>
