--- a/index.html
+++ b/index.html
@@ -204,27 +204,23 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                 <div class="section-title">
                     <div id="date-list">
                         <div class="date next-date" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800">
-                                <!--<h3><s style="color: #BEBEBE;">March 15th, 2024></s></h3>-->
-                                <!--<b style="font-size: 12pt; color: rgb(273, 179, 119); font-weight: 100"> DEADLINE EXTENDED!</b></h3>-->
-                                <!--<h3><s style="color: #BEBEBE; font-size: 15pt;">March 8th, 2024</s></h3>-->
-                            <h3>November 17th, 2024</h3>
+                            <h3>December 12th, 2025</h3>
                             <p>Abstract submission (not mandatory)</p>
                         </div>
-                        <div class="date next-date" data-aos="fade-up" data-aos-delay="200" data-aos-duration="800">
-                            <b style="font-size: 12pt; color: rgb(273, 179, 119); font-weight: 100"> DEADLINE EXTENDED!</b></h3>
-                            <h3>December 7th, 2024</h3>
+                        <div class="date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
+                            <h3>December 18th, 2025</h3>
                             <p>Paper subission</p>
                         </div>
-                        <div class="date next-date" data-aos="fade-up" data-aos-delay="300" data-aos-duration="800">
-                            <h3>December 22nd, 2024</h3>
+                        <div class="date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
+                            <h3>January 14nth, 2026</h3>
                             <p>Notification</p>
                         </div>
                         <div class="date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
-                            <h3>January 10th, 2025</h3>
+                            <h3>January 20th, 2026</h3>
                             <p>Paper camera ready</p>
                         </div>
                         <div class="date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
-                            <h3>March 4th, 2025</h3>
+                            <h3>March 17th, 2026</h3>
                             <p>Workshop</p>
                         </div>
                     </div>
