--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ Mining Software Repositories (MSR) techniques can support this quest by providin
                             <p>Paper subission</p>
                         </div>
                         <div class="date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
-                            <h3>January 14nth, 2026</h3>
+                            <h3>January 14th, 2026</h3>
                             <p>Notification</p>
                         </div>
                         <div class="date" data-aos="fade-up" data-aos-delay="400" data-aos-duration="800">
