--- a/call_for_papers.html
+++ b/call_for_papers.html
@@ -100,7 +100,7 @@
                     <li> MSR applications to P&S assurance.
                 </ul>
                 <h4> Special Topic of Interest </h4>
-                <p>Any paper within the scope of the workshop will be considered. Additionally, this year we especially welcome submissions elaborating on <b>Large Language Model (LLM)-based methods (including benefits and limitations) for mining security and privacy-related data (e.g., vulnerabilities) from software repositories.</b>.</p>
+                <p>Any paper within the scope of the workshop will be considered. Additionally, this year we especially welcome submissions elaborating on <b>Large Language Model (LLM)-based methods (including benefits and limitations) for mining security and privacy-related data (e.g., vulnerabilities) from software repositories</b>.</p>
             </div>
         </div>
         
